- ErmaC : Rename decompress_lzvn function to lzvn_decode follow Apple source name.
- bitshoveler : Make some constant arrays static; other minor fixes (acpi_patcher.c)
- bitshoveler : Make 'buffer' arg to aml_add_buffer 'const char *', was just 'char *' (aml_generator)
- bitshoveler : Various fixes to problems exposed by Clang static analyzer (picopng.c)
- ErmaC : Rollback changes for msdos.c (2327) thx to bltz
- bitshoveler : Remove "-x" option from "ld" command which breaks build under newer Xcode versions (/i386/modules/MakeInc.dir) 
- bitshoveler : Comment out some unused functions by expanding "#if UNUSED" conditional (stringTable.c)
- bitshoveler : Comment out unused static functions, which cause build to fail in "release" mode (vbe.c)
- bitshoveler : Fix null pointer handling (nvidia.c)
- bitshoveler : Only write terminating null char if malloc succeeded (strndup.c)
- bitshoveler : Fix memory leak (bdmesg.c)
- ErmaC : (re)enable klibc module
- ErmaC : Merge Recovery Icons(png) courtesy of blackosx
- ErmaC : Merge Yosemite patch (ready from June 2014) Thanks all involved in the test and develop;
		Special thanks: Alex J, viv xix, zenith432 from http://forge.voodooprojects.org/p/chameleon/issues/375/
		Testing and improvements: Pike R. Alpha, ErmaC, Bungo, blackosx, Micky1979, crazybirdy, oldnapalm, janek202, MinusZwei and Andy Vandijck.

- Pike R. Alpha : dinamic "random-seed" implementation ( http://www.insanelymac.com/forum/topic/301350-lets-make-random-seed-really-random/ )
- ErmaC : getCPUTick() helper function ( http://www.insanelymac.com/forum/topic/301350-lets-make-random-seed-really-random/ )
- ErmaC : Add Yosemite Icons detection for chameleon UI
- blackosx : Add chameleon UI Icons for Yosemite
- ErmaC : Use macro instead of full checkOSVersion
- viv xix : Move checkOSVersion into boot header
- ErmaC : define macro for OS X Versions
- Slice and Clover Team : Replace "NULL" terminated strings and fit Boot2 Sectors size
- ErmaC : Update bootargs